--- a/package.xml
+++ b/package.xml
@@ -24,6 +24,7 @@ Functions:
 * http_build_query
 * html_entity_decode
 * is_a
+* image_type_to_mime_type
 * scandir
 * str_ireplace
 * str_split
@@ -131,7 +132,8 @@ Fixed behaviour of stripos/strripos - searches for whole needle (PHP5 behaviour)
 		<state>stable</state>
 		<notes>Added more components:
 * html_entity_decode
-* version_compare</notes>
+* version_compare
+* image_type_to_mime_type</notes>
 		<filelist>
 			<dir name="/" baseinstalldir="PHP" role="php">	 
 				<file>Compat.php</file>
@@ -155,6 +157,7 @@ Fixed behaviour of stripos/strripos - searches for whole needle (PHP5 behaviour)
 						<file>http_build_query.php</file>
 						<file>html_entity_decode.php</file>
 						<file>is_a.php</file>
+						<file>image_type_to_mime_type.php</file>
 						<file>scandir.php</file>
 						<file>str_ireplace.php</file>
 						<file>str_split.php</file>
@@ -182,6 +185,7 @@ Fixed behaviour of stripos/strripos - searches for whole needle (PHP5 behaviour)
 						<file>html_entity_decode.phpt</file>
 						<file>http_build_query.phpt</file>
 						<file>is_a.phpt</file>
+						<file>image_type_to_mime_type.phpt</file>
 						<file>scandir.phpt</file>
 						<file>str_ireplace.phpt</file>
 						<file>str_split.phpt</file>
