--- a/package.xml
+++ b/package.xml
@@ -3,37 +3,7 @@
 	<name>PHP_Compat</name>
 	<summary>Provides missing functionality for older versions of PHP.</summary>
 
-	<description>PHP_Compat provides missing functionality in the form of Constants and Functions for older versions of PHP.
-
-Constants:
-* E_STRICT
-* PATH_SEPARATOR
-* STDIN, STDOUT, STDERR
-* FILE_USE_INCLUDE_PATH, FILE_IGNORE_NEW_LINES, FILE_SKIP_EMPTY_LINES, FILE_APPEND, FILE_NO_DEFAULT_CONTEXT 
-
-Functions:
-* array_change_key_case
-* array_chunk
-* array_combine
-* array_diff_assoc
-* array_udiff
-* array_udiff_assoc
-* file_get_contents
-* file_put_contents
-* fprintf
-* http_build_query
-* html_entity_decode
-* is_a
-* image_type_to_mime_type
-* scandir
-* str_ireplace
-* str_split
-* stripos
-* strripos
-* var_export
-* version_compare
-* vprintf
-* vsprintf</description>
+	<description>PHP_Compat provides missing functionality in the form of Constants and Functions and Enviroment settings for older versions of PHP.</description>
 
 	<maintainers>
 		<maintainer>
@@ -133,7 +103,15 @@ Fixed behaviour of stripos/strripos - searches for whole needle (PHP5 behaviour)
 		<notes>Added more components:
 * html_entity_decode
 * version_compare
-* image_type_to_mime_type</notes>
+* image_type_to_mime_type
+* array_key_exists
+* array_search
+* call_user_func_array
+* constant
+* ob_clean
+* ob_flush
+* ob_get_clean
+* ob_get_flush</notes>
 		<filelist>
 			<dir name="/" baseinstalldir="PHP" role="php">	 
 				<file>Compat.php</file>
@@ -149,8 +127,12 @@ Fixed behaviour of stripos/strripos - searches for whole needle (PHP5 behaviour)
 						<file>array_chunk.php</file>
 						<file>array_combine.php</file>
 						<file>array_diff_assoc.php</file>
+						<file>array_key_exists.php</file>
+						<file>array_search.php</file>
 						<file>array_udiff.php</file>
 						<file>array_udiff_assoc.php</file>
+						<file>call_user_func_array.php</file>
+						<file>constant</file>
 						<file>file_get_contents.php</file>
 						<file>file_put_contents.php</file>
 						<file>fprintf.php</file>
@@ -158,6 +140,10 @@ Fixed behaviour of stripos/strripos - searches for whole needle (PHP5 behaviour)
 						<file>html_entity_decode.php</file>
 						<file>is_a.php</file>
 						<file>image_type_to_mime_type.php</file>
+						<flie>ob_clean.php</file>
+						<file>ob_flush.php</file>
+						<file>ob_get_clean.php</file>
+						<file>ob_get_flush.php</file>
 						<file>scandir.php</file>
 						<file>str_ireplace.php</file>
 						<file>str_split.php</file>
