--- a/package.xml
+++ b/package.xml
@@ -132,7 +132,7 @@ Fixed behaviour of stripos/strripos - searches for whole needle (PHP5 behaviour)
 						<file>array_udiff.php</file>
 						<file>array_udiff_assoc.php</file>
 						<file>call_user_func_array.php</file>
-						<file>constant</file>
+						<file>constant.php</file>
 						<file>file_get_contents.php</file>
 						<file>file_put_contents.php</file>
 						<file>fprintf.php</file>
@@ -140,7 +140,7 @@ Fixed behaviour of stripos/strripos - searches for whole needle (PHP5 behaviour)
 						<file>html_entity_decode.php</file>
 						<file>is_a.php</file>
 						<file>image_type_to_mime_type.php</file>
-						<flie>ob_clean.php</file>
+						<file>ob_clean.php</file>
 						<file>ob_flush.php</file>
 						<file>ob_get_clean.php</file>
 						<file>ob_get_flush.php</file>
@@ -163,18 +163,18 @@ Fixed behaviour of stripos/strripos - searches for whole needle (PHP5 behaviour)
 						<file>array_chunk.phpt</file>
 						<file>array_combine.phpt</file>
 						<file>array_diff_assoc.phpt</file>
-						<file>array_key_exists.php</file>
-						<file>array_search.php</file>
+						<file>array_key_exists.phpt</file>
+						<file>array_search.phpt</file>
 						<file>array_udif_assoc.phpt</file>
 						<file>array_udiff.phpt</file>
-						<file>call_user_func_array.php</file>
-						<file>constant.php</file>
+						<file>call_user_func_array.phpt</file>
+						<file>constant.phpt</file>
 						<file>file_get_contents.phpt</file>
 						<file>file_put_contents.phpt</file>
 						<file>fprintf.phpt</file>
 						<file>html_entity_decode.phpt</file>
 						<file>http_build_query.phpt</file>
-						<file>image_type_to_mime_type.php</file>
+						<file>image_type_to_mime_type.phpt</file>
 						<file>is_a.phpt</file>
 						<file>ob_clean.phpt</file>
 						<file>ob_flush.phpt</file>
