--- a/package.xml
+++ b/package.xml
@@ -155,6 +155,7 @@ Added more components:
 * array_uintersect_uassoc
 * array_uintersect
 * array_udiff_uassoc
+* str_shuffle
 
 Added loadVersion:
 * Automatically loads functions to a specific version of PHP
@@ -203,6 +204,7 @@ Added loadVersion:
                         <file>str_ireplace.php</file>
                         <file>str_rot13.php</file>
                         <file>str_split.php</file>
+                        <file>str_shuffle.php</file>
                         <file>str_word_count.php</file>
                         <file>stripos.php</file>
                         <file>strpbrk.php</file>
@@ -249,6 +251,7 @@ Added loadVersion:
                         <file>str_ireplace.phpt</file>
                         <file>str_rot13.phpt</file>
                         <file>str_split.phpt</file>
+                        <file>str_shuffle.phpt</file>
                         <file>str_word_count.phpt</file>
                         <file>stripos.phpt</file>
                         <file>strpbrk.php</file>
