--- a/package.xml
+++ b/package.xml
@@ -150,7 +150,7 @@ Added more components:
 
     <release>
         <version>1.2.0</version>
-        <date>2004-07-01</date>
+        <date>2004-09-12</date>
         <license>PHP License</license>
         <state>stable</state>
         <notes>
@@ -174,6 +174,24 @@ Added more components:
 * php_strip_whitespace
 ]]>
         </notes>
+    </release>
+
+    <release>
+        <version>1.3.0</version>
+        <date>2004-xx-xx</date>
+        <license>PHP License</license>
+        <state>stable</state>
+        <notes>
+<![CDATA[
+Added more components:
+* array_diff_key.php 
+* array_diff_ukey.php 
+* array_intersect_assoc.php 
+* array_intersect_key.php 
+* array_intersect_uassoc.php 
+* array_intersect_ukey.php 
+]]>
+        </notes>
         <filelist>
             <dir name="/" baseinstalldir="PHP" role="php">     
                 <file>Compat.php</file>
@@ -189,6 +207,12 @@ Added more components:
                         <file>array_chunk.php</file>
                         <file>array_combine.php</file>
                         <file>array_diff_assoc.php</file>
+                        <file>array_diff_key.php</file>
+                        <file>array_diff_ukey.php</file>
+                        <file>array_intersect_assoc.php</file> 
+                        <file>array_intersect_key.php</file>
+                        <file>array_intersect_uassoc.php</file>
+                        <file>array_intersect_ukey.php</file>
                         <file>array_key_exists.php</file>
                         <file>array_search.php</file>
                         <file>array_udiff.php</file>
@@ -241,6 +265,12 @@ Added more components:
                         <file>array_chunk.phpt</file>
                         <file>array_combine.phpt</file>
                         <file>array_diff_assoc.phpt</file>
+                        <file>array_diff_key.phpt</file>
+                        <file>array_diff_ukey.phpt</file>
+                        <file>array_intersect_assoc.phpt</file> 
+                        <file>array_intersect_key.phpt</file>
+                        <file>array_intersect_uassoc.phpt</file>
+                        <file>array_intersect_ukey.phpt</file>
                         <file>array_key_exists.phpt</file>
                         <file>array_search.phpt</file>
                         <file>array_udiff.phpt</file>
